logs/robotframework-debuguilibrary.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/DebugUiLibrary'...
Compiling './lib/python3.5/site-packages/DebugUiLibrary/DebugUI.py'...
***   File "./lib/python3.5/site-packages/DebugUiLibrary/DebugUI.py", line 274
    print "KTHXBYE"
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/DebugUiLibrary/DebugUiLibrary.py'...
***   File "./lib/python3.5/site-packages/DebugUiLibrary/DebugUiLibrary.py", line 62
    print "Debug complete"
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/DebugUiLibrary/RfInterface.py'...
***   File "./lib/python3.5/site-packages/DebugUiLibrary/RfInterface.py", line 74
    print "No build context - ignored getVars"                              # Message for no browser open
                                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/DebugUiLibrary/controlsList.py'...
***   File "./lib/python3.5/site-packages/DebugUiLibrary/controlsList.py", line 39
    print 'controlsList',controlsList
                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/robotFramework_DebugUiLibrary-0.9.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
